<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_link_visual_grasp_gui</name>
  <version>0.1.0</version>
  <description>Ubuntu PySide6 remote client for Project LINK visual grasping.</description>
  <maintainer email="wheeltec@todo.todo">Project LINK</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>wheeltec_robot_msg</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>